# pyzas

./: README.md  c_build.py  pyproject.toml
c/: doc.h  methods.c  methods.h  pyzas.c  types.h
